# autocalib

./: CMakeLists.txt  README.txt  config.h  doxygen_config  doxygen_config.txt
core/: CMakeLists.txt
core/include/: core.h  core_inl.h
core/src/: core.cpp  precomp.h
core_evaluation/: CMakeLists.txt
core_evaluation/src/: _deprecated_autocalib_R_cam_real_ltd.cpp  autocalib_R_cam_real.cpp  autocalib_R_cam_real_ltd.cpp  autocalib_R_cam_synth.cpp  autocalib_stereo_pair_real.cpp  autocalib_stereo_pair_synth.cpp  calib_R_cam_real.cpp  calib_R_cam_synth.cpp  calib_rotational_camera_synthetic.cpp
core_tests/: CMakeLists.txt
core_tests/src/: core.cpp  main.cpp  precomp.h
crossvalidate/: CMakeLists.txt
crossvalidate/src/: main.cpp
evaluation/: CMakeLists.txt
evaluation/include/: evaluation.h
evaluation/src/: evaluation.cpp
jps2jpg/: CMakeLists.txt
jps2jpg/src/: main.cpp
samples/src/: _deprecated_autocalib_R_cam_real_ltd.cpp  autocalib_R_cam_real.cpp  autocalib_R_cam_synth.cpp  autocalib_stereo_pair_real.cpp  autocalib_stereo_pair_synth.cpp
stereo_stream_splitter/: CMakeLists.txt
stereo_stream_splitter/src/: main.cpp
takeshots/: CMakeLists.txt
takeshots/src/: main.cpp
tests/: CMakeLists.txt
tests/core_tests/src/: core.cpp
tests/src/: core.cpp  precomp.h
undistort/: CMakeLists.txt
undistort/src/: main.cpp
